fixed login grids on mobile view

--- a/src/public/css/style.css
+++ b/src/public/css/style.css
@@ -32,8 +32,8 @@ i.footer {
 
 .login-container,
 .rules-container {
-    width: 400px;
-    margin-top: 200px;
+    /* width: 400px; */
+    margin: 200px auto;
     text-align: center;
     box-shadow: 10px 10px 10px rgba(0, 0, 0, 0.2);
 }
